Fixed rounded .closeButton on Firefox for Android

--- a/WebExtension/report/builtinskin.css
+++ b/WebExtension/report/builtinskin.css
@@ -23,6 +23,7 @@ a img {
 	flex-direction: row;
 	align-items: center;
 	font-size: 16px;
+	border-radius: 0; /* Needed for Firefox for Android */
 }
 .closeButton::before {
 	width: 20px;
